fix : novo header

--- a/src/assets/Especial/ogl/Threads.css
+++ b/src/assets/Especial/ogl/Threads.css
@@ -2,4 +2,10 @@
     position: relative;
     width: 100%;
     height: 100%;
+}
+@media (max-width : 430px) {
+  .threads-container {
+    display: none;
   }
+  
+}
